# X-diagnosis

./: .gitignore  MANIFEST.in  Makefile  README.en.md  README.md  build.sh  setup.py  xdiag
config/: diag.conf  sysinspect.conf
doc/: README.md  cpuload.en.md  cpuload.md  memtool.en.md  memtool.md
selftest/xd_rtnlcheck/: Makefile
selftest/xd_schedmonitor/: Makefile  testsched.c
selftest/xd_schedmonitor/irqovertime/: Makefile  irqovertime.c
selftest/xd_schedmonitor/kthovertime/: Makefile  kthovertime.c
src/cpu/: cpuload.py
src/ebpf/: CMakeLists.txt
src/ebpf/common/bpf_common/: common_k.h  common_u.h  kallsyms.h
src/ebpf/common/mk/: bpf.cmake  var.cmake
src/ebpf/iostack/: CMakeLists.txt
src/ebpf/iostack/xd_ext4fsstat/: CMakeLists.txt  xd_ext4fsstat.c
src/ebpf/iostack/xd_ext4fsstat/bpf/: CMakeLists.txt  xd_ext4fsstat.bpf.c  xd_ext4fsstat.h
src/ebpf/iostack/xd_iolatency/: CMakeLists.txt  xd_iolatency.c
src/ebpf/iostack/xd_iolatency/bpf/: CMakeLists.txt  xd_iolatency.bpf.c  xd_iolatency.h
src/ebpf/iostack/xd_scsiiocount/: CMakeLists.txt  xd_scsiiocount.c
src/ebpf/iostack/xd_scsiiocount/bpf/: CMakeLists.txt  xd_scsiiocount.h
src/ebpf/iostack/xd_scsiiotrace/: CMakeLists.txt  xd_scsiiotrace.c
src/ebpf/iostack/xd_scsiiotrace/bpf/: CMakeLists.txt  xd_scsiiotrace.bpf.c  xd_scsiiotrace.h
src/ebpf/net/: CMakeLists.txt
src/ebpf/net/xd_arpstormcheck/: CMakeLists.txt  xd_arpstormcheck.c
src/ebpf/net/xd_arpstormcheck/bpf/: CMakeLists.txt  xd_arpstormcheck.bpf.c
src/ebpf/net/xd_netvringcheck/: CMakeLists.txt  xd_netvringcheck.c
src/ebpf/net/xd_netvringcheck/bpf/: CMakeLists.txt  xd_netvringcheck.bpf.c  xd_netvringcheck.h
src/ebpf/net/xd_ntrace/: CMakeLists.txt  xd_ntrace.c
src/ebpf/net/xd_ntrace/bpf/: CMakeLists.txt  xd_ntrace.bpf.c
src/ebpf/net/xd_skblen_check/: CMakeLists.txt  xd_skblen_check.c
src/ebpf/net/xd_skblen_check/bpf/: CMakeLists.txt  xd_skblen_check.bpf.c
src/ebpf/net/xd_tcphandcheck/: CMakeLists.txt  xd_tcphandcheck.c
src/ebpf/net/xd_tcphandcheck/bpf/: CMakeLists.txt  xd_tcphandcheck.bpf.c
src/ebpf/net/xd_tcpresetstack/: CMakeLists.txt  xd_tcpresetstack.c
src/ebpf/net/xd_tcpresetstack/bpf/: CMakeLists.txt  xd_tcpresetstack.bpf.c
src/ebpf/net/xd_tcpskinfo/: CMakeLists.txt  xd_tcpskinfo.c
src/ebpf/net/xd_tcpskinfo/bpf/: CMakeLists.txt  xd_tcpskinfo.h
src/ebpf/sched/: CMakeLists.txt
src/ebpf/sched/xd_rtnlcheck/: CMakeLists.txt  xd_rtnlcheck.c
src/ebpf/sched/xd_rtnlcheck/bpf/: CMakeLists.txt  xd_rtnlcheck.bpf.c  xd_rtnlcheck.h
src/ebpf/sched/xd_schedmonitor/: CMakeLists.txt  xd_schedmonitor.c
src/ebpf/sched/xd_schedmonitor/bpf/: CMakeLists.txt  xd_schedmonitor.bpf.c
src/kernel/: CMakeLists.txt
src/kernel/common/mk/: FindKernelHeaders.cmake
src/kernel/sched/: CMakeLists.txt  watchcfs.c
src/memory/: memtool.sh
src/oom_debug_info/: Makefile  oom_debug_info.c  oom_debug_info.h
src/python/xdiagnose/: __main__.py  arguments.py  xdiagnose.py
src/python/xdiagnose/cmdfile/: eftrace.py
src/python/xdiagnose/ntrace/: enter.py
src/python/xdiagnose/sysinspect/: inspect.py
src/python/xdiagnose/utils/: config.py  logger.py
xdiag_ebpf/: build.sh
xdiag_ebpf/src/: Makefile
xdiag_ebpf/src/common/: common_k.h  common_u.h  scsi_proto.h
xdiag_ebpf/src/include/: vmlinux.h
xdiag_ebpf/src/io/xd_scsiiocount/: Makefile  scsi_utils.h  xd_scsiiocount  xd_scsiiocount.bpf.c  xd_scsiiocount.skel.h
xdiag_ebpf/src/io/xd_scsiiotrace/: Makefile  xd_scsiiotrace  xd_scsiiotrace.c  (+1 more)
xdiag_ebpf/src/mk/: var.mk
xdiag_ebpf/tools/: bpftool
xdiag_sh/sysinspect/: sysinspect
xdiagnose/: Makefile  arguments.py  xdiagnose.py
xdiagnose/cmdfile/: eftrace.py
xdiagnose/cmdfile/kernel/: 4.19.90-2112.8.0.0131.oe1.x86_64.f  5.10.0-54.0.0.27.oe1.x86_64.f
xdiagnose/cmdfile/source/: icmp_kprobe.src  sd_kprobe.src  tcp_kprobe.src  udp_kprobe.src
xdiagnose/common/: config.py  logger.py
xdiagnose/common/mk/: var.mk
xdiagnose/inspect/: inspect.py
xdiagnose/inspect/common/: log_common_check.py  log_cpu.py
xdiagnose/inspect/net/: log_bond4_check.py  log_ct.py  log_net_check.py  log_nic_check.py  log_proc.py  log_qd.py  log_sk.py
xdiagnose/iostack/: enter.py
xdiagnose/iostack/proto/: sd.py  sd_handler.py
xdiagnose/iostack/xd_ext4fsstat/: Makefile  xd_ext4fsstat.bpf.c  xd_ext4fsstat.c
xdiagnose/iostack/xd_iolatency/: Makefile  xd_iolatency.bpf.c  xd_iolatency.c
xdiagnose/iostack/xd_scsiiocount/: Makefile  xd_scsiiocount.c
xdiagnose/iostack/xd_scsiiotrace/: Makefile  xd_scsiiotrace.bpf.c  xd_scsiiotrace.c  xd_scsiiotrace.h
xdiagnose/iostack/xdiag/: pub.py
xdiagnose/kernelhook/: hook.py
xdiagnose/mm/mmap_slow/: Makefile  README.md  sak  show_bt.c  show_bt.h
xdiagnose/net/kernelhook/: hook.py
xdiagnose/net/ntrace/: enter.py
xdiagnose/net/xd_arpstormcheck/: Makefile  xd_arpstormcheck.bpf.c  xd_arpstormcheck.c  xd_arpstormcheck.h
xdiagnose/net/xd_netvringcheck/: Makefile  xd_netvringcheck.bpf.c  xd_netvringcheck.c  xd_netvringcheck_k.h
xdiagnose/net/xd_ntrace/: Makefile  xd_ntrace.bpf.c  xd_ntrace.c  xd_ntrace.h
xdiagnose/net/xd_rtnlcheck/: Makefile  xd_rtnlcheck.bpf.c  xd_rtnlcheck.c
xdiagnose/net/xd_skblen_check/: Makefile  xd_skblen_check.c  xd_skblen_check.h
xdiagnose/net/xd_tcphandcheck/: Makefile  xd_tcphandcheck.bpf.c  xd_tcphandcheck.c  xd_tcphandcheck.h
xdiagnose/net/xd_tcpreststack/: Makefile  xd_tcpreststack.bpf.c  xd_tcpreststack.c  xd_tcpreststack.h
xdiagnose/net/xd_tcpskinfo/: Makefile  xd_tcpskinfo.bpf.c  xd_tcpskinfo.c
xdiagnose/ntrace/: enter.py
xdiagnose/ntrace/parse/: params.py
xdiagnose/ntrace/proto/: icmp.py  icmp_handler.py  tcp.py  tcp_handler.py  udp.py  udp_handler.py
xdiagnose/ntrace/xdiag/: pub.py
xdiagnose/sched/xd_schedmonitor/: Makefile  xd_schedmonitor.bpf.c  xd_schedmonitor.c  xd_schedmonitor.h
xdiagnose/selftest/xd_rtnlcheck/: rtnlcheck_test.c
xdiagnose/selftest/xd_schedmonitor/: readme
xdiagnose/sysinfo/sysinspect/: sysinspect
xdiagnose/sysinfo/sysmonitor/: inspect.py
xdiagnose/tcp_hand_check/: tcp_hand_check.py
xdiagnose/utils/: __init__.py
(+46 files in other folders)
